--- a/Plugins/NativeEngine/CMakeLists.txt
+++ b/Plugins/NativeEngine/CMakeLists.txt
@@ -10,6 +10,10 @@ set(SOURCES
     "Source/ShaderCompiler.h"
     "Source/ShaderCompilerCommon.h"
     "Source/ShaderCompilerCommon.cpp"
+    "Source/ShaderCache.h"
+    "Source/ShaderCache.cpp"
+    "Source/xxhash.h"
+    "Source/xxhash.c"
     "Source/ShaderCompilerTraversers.cpp"
     "Source/ShaderCompilerTraversers.h"
     "Source/ShaderCompiler${GRAPHICS_API}.cpp"
