--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # General
 option(BABYLON_NATIVE_BUILD_APPS "Build Babylon Native apps." ${PROJECT_IS_TOP_LEVEL})
 option(BABYLON_NATIVE_INSTALL "Include the install target." ${PROJECT_IS_TOP_LEVEL})
-option(BABYLON_DEBUG_TRACE "Debug Trace callback."  OFF)
+option(BABYLON_DEBUG_TRACE "Enable debug trace." OFF)
 
 # WARNING: This is experimental. Only use it if you can ensure that your application will properly handle thread affinity.
 option(BABYLON_NATIVE_CHECK_THREAD_AFFINITY "Checks thread safety in the graphics device calls. It can be removed if hosting application ensures thread coherence." ON)
@@ -168,7 +168,7 @@ if(APPLE)
 endif()
 
 if(BABYLON_DEBUG_TRACE)
-    add_definitions(-DBABYLON_DEBUG_TRACE)
+    add_compile_definitions(BABYLON_DEBUG_TRACE)
 endif()
 
 add_subdirectory(Dependencies)
