--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -22,6 +22,10 @@ jobs:
         cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON 
       displayName: 'Generate macOS solution'
 
+    - script: |
+        xcodebuild -list -project buildmacOS/BabylonNative.xcodeproj
+      displayName: 'List available project schemes'
+
     - task: Xcode@5
       inputs:
         xcWorkspacePath: 'buildmacOS/BabylonNative.xcodeproj'
