up gradle task, xcode, cmake

--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -22,18 +22,27 @@ jobs:
         cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
       displayName: 'Generate macOS solution'
 
+    - script: |
+        xcodebuild -list -project buildmacOS/BabylonNative.xcodeproj
+      displayName: 'List available project schemes'
+
+    - task: Xcode@5
+      inputs:
+        xcWorkspacePath: 'buildmacOS/BabylonNative.xcodeproj'
+        scheme: 'install'
+        sdk: 'macosx'
+        useXcpretty: false
+        configuration: Release
+      displayName: 'Build Installation content macOS'
+
     - task: Xcode@5
       inputs:
         xcWorkspacePath: 'buildmacOS/BabylonNative.xcodeproj'
         scheme: 'Playground'
         sdk: 'macosx'
         useXcpretty: false
-        configuration: Release
+        configuration: RelWithDebInfo
       displayName: 'Build Playground macOS'
-
-    - script: |
-        cmake --install buildmacOS --prefix="./install"
-      displayName: 'Install'
 
     - task: Xcode@5
       inputs:
@@ -43,6 +52,10 @@ jobs:
         useXcpretty: false
         configuration: RelWithDebInfo
       displayName: 'Build UnitTests macOS'
+
+#    - script: |
+#        cmake --install buildmacOS --prefix="./install"
+#      displayName: 'Install'
 
     - script: |
         cd buildmacOS/Apps/UnitTests/RelWithDebInfo
