--- a/.github/jobs/ios.yml
+++ b/.github/jobs/ios.yml
@@ -20,7 +20,7 @@ jobs:
       displayName: 'Select Xcode ${{ parameters.xcodeVersion }}'
 
     - script: |
-        cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON  --prefix="$(Build.SourcesDirectory)/Install"
       displayName: 'Generate iOS solution'
 
     - task: Xcode@5
@@ -39,7 +39,7 @@ jobs:
         sdk: 'iphoneos'
         useXcpretty: false
         configuration: Release
-      displayName: 'Build Playground iOS'
+      displayName: 'Build Installation content iOS'
 
     - script: |
         lipo -info $(Build.SourcesDirectory)/Install/lib/libxr.a
