--- a/.github/jobs/ios.yml
+++ b/.github/jobs/ios.yml
@@ -20,7 +20,7 @@ jobs:
       displayName: 'Select Xcode ${{ parameters.xcodeVersion }}'
 
     - script: |
-        cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D CMAKE_IOS_INSTALL_COMBINED=ON
       displayName: 'Generate iOS solution'
 
     - task: Xcode@5
@@ -32,16 +32,8 @@ jobs:
         configuration: RelWithDebInfo
       displayName: 'Build Playground iOS'
 
-    - task: Xcode@5
-      inputs:
-        xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
-        scheme: 'install'
-        sdk: 'iphoneos'
-        useXcpretty: false
-        configuration: Release
-      displayName: 'Build Installation content iOS'
-
     - script: |
+        cmake --install buildiOS --prefix="$(Build.SourcesDirectory)/install"
         lipo -info $(Build.SourcesDirectory)/Install/lib/libxr.a
       displayName: 'Install'
 
