--- a/.github/jobs/ios.yml
+++ b/.github/jobs/ios.yml
@@ -2,7 +2,7 @@ parameters:
   name: ''
   vmImage: ''
   xcodeVersion: ''
-  deploymentTarget: '12'
+  deploymentTarget: '15'
 
 jobs:
   - job: ${{ parameters.name }}
@@ -20,17 +20,8 @@ jobs:
       displayName: 'Select Xcode ${{ parameters.xcodeVersion }}'
 
     - script: |
-        cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D CMAKE_IOS_INSTALL_COMBINED=ON -D CMAKE_INSTALL_PREFIX="$(Build.SourcesDirectory)/Install"
+        cmake -G Xcode -B buildiOS -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D CMAKE_IOS_INSTALL_COMBINED=NO
       displayName: 'Generate iOS solution'
-
-    - task: Xcode@5
-      inputs:
-        xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
-        scheme: 'Playground'
-        sdk: 'iphoneos'
-        useXcpretty: false
-        configuration: RelWithDebInfo
-      displayName: 'Build Playground iOS'
 
     - task: Xcode@5
       inputs:
@@ -39,9 +30,18 @@ jobs:
         sdk: 'iphoneos'
         useXcpretty: false
         configuration: Release
-      displayName: 'Build Installation content iOS'
+      displayName: 'Build Playground iOS'
 
     - script: |
+        cmake --install buildiOS --prefix="$(Build.SourcesDirectory)/Install"
         lipo -info $(Build.SourcesDirectory)/Install/lib/libxr.a
       displayName: 'Install'
 
+    - task: Xcode@5
+      inputs:
+        xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
+        scheme: 'Playground'
+        sdk: 'iphoneos'
+        useXcpretty: false
+        configuration: Release
+      displayName: 'Build Playground iOS'
