--- a/.github/jobs/test_install_ios.yml
+++ b/.github/jobs/test_install_ios.yml
@@ -5,7 +5,8 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    timeoutInMinutes: 30
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    timeoutInMinutes: 40
     pool:
       vmImage: ${{ parameters.vmImage }}
   
@@ -31,4 +32,8 @@ jobs:
         configuration: Release
       displayName: 'Build Playground iOS'
 
+    - script: |
+        cmake --install buildiOS --prefix="$(Build.SourcesDirectory)/Install"
+        lipo -info $(Build.SourcesDirectory)/Install/lib/libxr.a
+      displayName: 'Install'
 
