add emscripten support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,8 @@ elseif(WIN32)
     set(BABYLON_NATIVE_PLATFORM "Win32")
 elseif(UNIX)
     set(BABYLON_NATIVE_PLATFORM "Unix")
+elseif(EMSCRIPTEN)
+    set(BABYLON_NATIVE_PLATFORM "Emscripten")
 else()
     message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
 endif()
@@ -141,6 +143,8 @@ elseif(WIN32)
             message(FATAL_ERROR "Unrecognized/Unsupported render API: ${GRAPHICS_API}")
         endif()
     endif()
+elseif(EMSCRIPTEN)
+    set(GRAPHICS_API OpenGL)
 endif()
 
 if(APPLE)
