--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -11,6 +11,8 @@ set(SOURCES
     "Source/Context.h"
     "Source/MeasureText.cpp"
     "Source/MeasureText.h"
+    "Source/Gradient.cpp"
+    "Source/Gradient.h"
     "Source/nanovg_babylon.cpp"
     "Source/nanovg_babylon.h"
     )
