Initialize Path2D with canvas. Now accessible from _native.Path2D

--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -7,6 +7,9 @@ set(SOURCES
     "Source/Image.h"
     "Source/ImageData.cpp"
     "Source/ImageData.h"
+    "Source/Path2D.cpp"
+    "Source/Path2D.h"
+    "Source/LineCaps.h"
     "Source/Context.cpp"
     "Source/Context.h"
     "Source/MeasureText.cpp"
