Nanovg shaders in canvas

--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -15,14 +15,17 @@ set(SOURCES
     "Source/nanovg_babylon.h"
     )
 
+file(GLOB SHADERS Source/*.sc)
+
 file(GLOB FONT_SOURCES ${BGFX_DIR}/examples/common/font/*.cpp)
 file(GLOB NANOVG_SOURCES ${BGFX_DIR}/examples/common/nanovg/nanovg.cpp)
 set(ATLAS_SOURCES ${BGFX_DIR}/examples/common/cube_atlas.cpp)
 
-add_library(Canvas ${SOURCES} ${FONT_SOURCES} ${ATLAS_SOURCES} ${NANOVG_SOURCES})
+add_library(Canvas ${SOURCES} ${FONT_SOURCES} ${ATLAS_SOURCES} ${NANOVG_SOURCES} ${SHADERS})
 
 target_include_directories(Canvas
     PUBLIC "Include"
+    PRIVATE "Source"
     PRIVATE "${BGFX_DIR}/3rdparty"
     PRIVATE "${BGFX_DIR}/examples/common"
     PRIVATE "${BGFX_DIR}/examples/common/nanovg")
@@ -36,6 +39,15 @@ target_link_libraries(Canvas
     PRIVATE GraphicsDeviceContext
     PRIVATE UrlLib
     PRIVATE base-n)
+
+if(BGFX_BUILD_TOOLS AND BGFX_BUILD_TOOLS_SHADER AND BGFX_BUILD_EXAMPLES)
+    if(NOT IOS AND NOT VISIONOS AND NOT ANDROID)
+        foreach(SHADER ${SHADERS})
+            add_bgfx_shader(${SHADER} "")
+        endforeach()
+    endif()
+    add_dependencies(Canvas shaderc)
+endif()
 
 set_property(TARGET Canvas PROPERTY FOLDER Polyfills)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
