--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -7,6 +7,9 @@ set(SOURCES
     "Source/Image.h"
     "Source/ImageData.cpp"
     "Source/ImageData.h"
+    "Source/Path2D.cpp"
+    "Source/Path2D.h"
+    "Source/LineCaps.h"
     "Source/Context.cpp"
     "Source/Context.h"
     "Source/MeasureText.cpp"
@@ -15,6 +18,7 @@ set(SOURCES
     "Source/Gradient.h"
     "Source/nanovg_babylon.cpp"
     "Source/nanovg_babylon.h"
+    "Source/nanosvg.h"
     )
 
 file(GLOB FONT_SOURCES ${BGFX_DIR}/examples/common/font/*.cpp)
